--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,121 +1,134 @@
+
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
   height: 100vh;
+  background-color: #6B7B8E;
+  background-image:
+    linear-gradient(to right, #8FBBAF 1px, transparent 1px),
+    linear-gradient(to bottom, #8FBBAF 1px, transparent 1px);
+  background-size: 20px 20px;
+  background-position: -2px -2px;
 }
 
 .main {
-  padding: 5rem 0;
-  flex: 1;
+  margin: 0 20px 20px 50px;
+  padding-top: 50px;
+  display: grid;
+  grid-template-columns: 10% 1fr;
+  height: 80vh;
+  font-family: 'Red Hat Display', sans-serif;
+}
+
+.left {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
 }
 
-.footer {
+.numberBtnsWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+.numberBtn {
+  border: 2px solid #363062;
+  background-color: #8FBBAF;
+  margin: 2px 0;
+  font-size: 2.4rem;
+  color: #827397;
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
+  font-family: 'Orbitron', sans-serif;
+}
+
+.numberBtn-active {
+  border: 2px solid #363062;
+  background-color: #D6F8B8;
+  margin: 2px 0;
+  font-size: 2.4rem;
+  color: #827397;
+  width: 4rem;
+}
+
+.numberBtn:hover {
+  cursor: pointer;
+  background-color: #D6F8B8;
+}
+
+.burger {
+  width: 100%;
+  border: 2px solid #363062;
+  background-color: #D6F8B8;
+  margin: 2px 0;
+  font-size: 2.4rem;
+  color: #827397;
+}
+
+.screen {
+  display: grid;
+  grid-template-rows: 3em 1fr;
+  border: 2px solid #363062;
+  background-color: #8FBBAF;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 12px rgba(0,0,0,0.23);
+}
+
+.titleBar {
   display: flex;
-  justify-content: center;
+  border-bottom: 2px solid #363062;
+  justify-content: space-between;
   align-items: center;
+  background-color: #D6F8B8;
 }
 
-.footer a {
+.titleBtns {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.titleBtn {
+  border-left: 2px solid #363062;
+  padding: 3px 8px;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.titleBtns div:hover {
+  cursor: pointer;
 }
 
 .title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
+  text-transform: uppercase;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 2.3rem;
+  margin-left: 1rem;
+  color: #827397;
 }
 
-.title,
-.description {
-  text-align: center;
+.screenContent {
+  text-transform: uppercase;
+  margin-left: 1rem;
+  color: #363062;
+  font-size: 2.3rem;
 }
 
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
+.screenContentTitle {
+  letter-spacing: 8px;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.footer {
+  position: fixed;
+  bottom: 24px;
+  right: 20px;
   display: flex;
   align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
+  color: #D6F8B8;
+  font-size: 1.7rem;
+  font-weight: 300;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  width: 45%;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.credit {
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  text-align: center;
+  color: #D6F8B8;
 }
