--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,40 +1,33 @@
-
 .container {
     margin: 0;
     height: 100vh;
-    background-color: var(--light-blue);
-    background-image:
-      linear-gradient(to right, var(--dark-green) 1px, transparent 1px),
-      linear-gradient(to bottom, var(--dark-green) 1px, transparent 1px);
-    background-size: 20px 20px;
-    background-position: -2px -2px;
-  }
-  
-  .main {
+}
+
+.main {
     margin: 0 20px 20px 0;
     padding-top: 50px;
     display: grid;
     grid-template-columns: 10% 1fr;
     height: 80vh;
-  }
+}
 
-  
-  
-  .left {
+/* Left Buttons */
+
+.left {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-  }
-  
-  .numberBtnsWrapper {
+}
+
+.numberBtnsWrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-  }
-  
-  .numberBtn {
+}
+
+.numberBtn {
     border: 2px solid var(--dark-blue);
     background-color: var(--dark-green);
     margin: 2px 0;
@@ -43,81 +36,85 @@
     width: 100%;
     font-weight: 900;
     font-family: Orbitron, sans-serif;
-  }
-  
-  .numberBtn-active {
+}
+
+.numberBtn-active {
     border: 2px solid var(--dark-blue);
     background-color: var(--light-green);
     margin: 2px 0;
     font-size: 2.4rem;
     color: var(--purple);
     width: 4rem;
-  }
-  
-  .numberBtn:hover {
+}
+
+.numberBtn:hover {
     cursor: pointer;
     background-color: var(--light-green);
-  }
-  
-  .burger {
+}
+
+.burger {
     width: 100%;
     border: 2px solid var(--dark-blue);
     background-color: var(--light-green);
     margin: 2px 0;
     font-size: 2.4rem;
     color: var(--purple);
-  }
-  
-  .screen {
+}
+
+/* Screen */
+
+.screen {
     display: grid;
     grid-template-rows: 3em 1fr;
     border: 2px solid var(--dark-blue);
     background-color: var(--dark-green);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 12px rgba(0,0,0,0.23);
-  }
-  
-  .titleBar {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 12px rgba(0, 0, 0, 0.23);
+}
+
+.titleBar {
     display: flex;
     border-bottom: 2px solid var(--dark-blue);
     justify-content: space-between;
     align-items: center;
     background-color: var(--light-green);
-  }
-  
-  .titleBtns {
+}
+
+.titleBtns {
     display: flex;
-  }
-  
-  .titleBtn {
+}
+
+.titleBtn {
     border-left: 2px solid var(--dark-blue);
     padding: 3px 8px;
-  }
-  
-  .titleBtns div:hover {
+}
+
+.titleBtns div:hover {
     cursor: pointer;
-  }
-  
-  .title {
+}
+
+.title {
     text-transform: uppercase;
     font-size: 2.3rem;
     font-weight: 900;
     font-family: Orbitron, sans-serif;
     margin-left: 1rem;
     color: var(--purple);
-  }
-  
-  .screenContent {
+}
+
+.screenContent {
     text-transform: uppercase;
     margin-left: 1rem;
     color: var(--dark-blue);
     font-size: 2.3rem;
-  }
-  
-  .screenContentTitle {
+}
+
+.screenContentTitle {
     letter-spacing: 8px;
-  }
-  
-  .footer {
+}
+
+/* Footer and Credits */
+
+.footer {
     position: fixed;
     bottom: 24px;
     right: 20px;
@@ -126,38 +123,41 @@
     color: var(--light-green);
     font-size: 1.7rem;
     font-weight: 300;
-  }
-  
-  .credit {
+}
+
+.credit {
     position: fixed;
     bottom: 0px;
     width: 100%;
     text-align: center;
     color: var(--light-green);
-  }
+}
 
-  @media screen and (max-width: 900px) {
+/* Phone Styles */
+
+@media screen and (max-width: 900px) {
     .main {
-      margin: 0 14px 0 14px;
-      padding-top: 0;
-      display: flex;
-      flex-direction: column;
+        margin: 0 14px 0 14px;
+        padding-top: 0;
+        display: flex;
+        flex-direction: column;
     }
 
-    .numberBtn, .burger {
-      flex: 1;
-      margin: 2px;
-      max-width: 100%;
+    .numberBtn,
+    .burger {
+        flex: 1;
+        margin: 2px;
+        max-width: 100%;
     }
 
     .numberBtnsWrapper {
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: center;
-      align-items: space-between;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-items: space-between;
     }
 
     .title {
-      font-size: clamp(1.2rem, 8vw - 2rem, 2.3rem);
+        font-size: clamp(1.2rem, 8vw - 2rem, 2.3rem);
     }
-  }
+}
