--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,12 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Raleway', sans-serif;
+  background-color: var(--light-blue);
+    background-image:
+      linear-gradient(to right, var(--dark-green) 1px, transparent 1px),
+      linear-gradient(to bottom, var(--dark-green) 1px, transparent 1px);
+    background-size: 20px 20px;
+    background-position: -2px -2px;
 }
 
 a {
@@ -25,4 +31,10 @@ a:hover {
 
 * {
   box-sizing: border-box;
+}
+
+img {
+  border-radius: 10px;
+  max-width: 200px;
+  height: auto;
 }
