--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -105,6 +105,7 @@
 .screenContent {
     text-transform: uppercase;
     margin-left: 1rem;
+    padding-right: 1rem;
     color: var(--dark-blue);
     font-size: 2.3rem;
     overflow: auto;
