--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,8 @@ body {
       linear-gradient(to bottom, var(--dark-green) 1px, transparent 1px);
     background-size: 20px 20px;
     background-position: -2px -2px;
+  max-height: 100%;
+  height: 100%;
 }
 
 a {
