--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -114,12 +114,18 @@
 }
 
 .screenContent {
-    text-transform: uppercase;
     margin-left: 1rem;
     padding-right: 1rem;
     color: var(--dark-blue);
     font-size: 2.3rem;
     overflow: auto;
+}
+
+.screenContent ul {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 1em;
+    text-indent: -1em;
 }
 
 .screenContentTitle {
