--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -128,6 +128,10 @@
     text-indent: -1em;
 }
 
+.screenContent a {
+    font-weight: bold;
+}
+
 .screenContentTitle {
     letter-spacing: 8px;
 }
